# Livraria-Django-1

./: db.sqlite3  package-lock.json  pyproject.toml
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_livro_autores.py  0002_livro_capa.py  0003_compra.py  0004_itenscompra.py
livraria/models/: __init__.py  autor.py  compra.py  livro.py
livraria/serializers/: __init__.py  livro.py
livraria/views/: __init__.py  autor.py  livro.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
